# raygpu

./: .clang-tidy  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
amalgamation/glslang/StandAlone/: CMakeLists.txt
cmake/: raygpuConfig.cmake.in
examples/: CMakeLists.txt  async.c  benchmark_cubes.c  benchmark_cubes.cpp  benchmark_tilemap.cpp  compute.cpp  core_headless.c  core_msaa.c  core_multiwindow.c  core_rendertexture.c  core_resizable.c  core_screenrecord.cpp  core_shapes.c  core_window.c  input_text.c  models_cube.c  models_glb.cpp  models_gpu_skinning.cpp  models_lights.cpp  models_obj.cpp  pipeline_basic.c  pipeline_instancing.cpp  plain_wgvk.c  rlfunctions.c  shaders_basic.c  shaders_glsl.cpp  split_screen_camera3d.c  surface_wgvk.c  textures_array.c  textures_formats.cpp  vao_multibuffer.cpp
include/: c_fs_utils.h  config.h  enum_translation.h  fs.h  internals.h  internals.hpp  macros_and_constants.h  mathutils.h  raygpu.h  raylib.h  renderstate.hpp  tint_c_api.h  wgpustate.inc
resources/: rgshell.html
src/: InitWindow.c  InitWindow.cpp  InitWindow_GLFW.c  InitWindow_GLFW.cpp  InitWindow_RGFW.cpp  InitWindow_SDL2.cpp  InitWindow_SDL3.c  InitWindow_SDL3.cpp  backend_wgpu.c  backend_wgpu.cpp  cgltf_impl.c  dawn_glfwrip.cpp  glfw3webgpu.c  glfw3webgpu.h  glsl_support.cpp  models.c  models.cpp  msf_gif_impl.c  raygpu.c  raygpu.cpp  rgfw_impl.c  rgfwwebgpu.c  rshapes.c  rtext.c  sdl2webgpu.c  sdl2webgpu.h  sdl3webgpu.c  sdl3webgpu.cpp  sdl3webgpu.h  shader_parse.cpp  sinfl_impl.c  stb_impl.c  utils_metal.mm  wgsl_compiler.c  wgsl_parse_lite.c  windows_stuff.c
src/backend_vulkan/: backend_vulkan.cpp  vulkan_internals.hpp  vulkan_pipeline.cpp  vulkan_textures.cpp
src/internal_include/: c_fs_utils.h  internals.h  renderstate.h  tint_c_api.h
src/platform/: InitWindow_GLFW.c  InitWindow_RGFW.c  InitWindow_RGFW.cpp  InitWindow_SDL2.cpp  InitWindow_SDL3.c  glfw3webgpu.c  glfw3webgpu.h  rgfwwebgpu.c  sdl2webgpu.c  sdl2webgpu.h  sdl3webgpu.c  sdl3webgpu.h
src/simple_wgsl/: wgsl_parser.c  wgsl_parser.h  wgsl_resolve.c  wgsl_resolve.h
